change form so buttons redirect to signup page

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
           <div class="form-group">
             <label for="password">Senha</label>
             <input
-            type="password"
-            name="password"
-            id="password"
-            required
-            placeholder="********"
+              type="password"
+              name="password"
+              id="password"
+              required
+              placeholder="********"
             />
             <a href="">esqueceu sua senha?</a>
           </div>
-          <button id="signin" type="submit">Entrar</button>
+          <a id="signin">Entrar</a>
           <div class="divider">
             <div class="line"></div>
             <div class="or">or</div>
             <div class="line"></div>
           </div>
-          <button id="signup" type="button">Cadastre-se</button>
+          <a id="signup">Cadastre-se</a>
         </form>
       </div>
     </main>
