--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/index.css" />
+    <link rel="stylesheet" href="/stylesheets/index.css" />
     <title>Indica Aí</title>
   </head>
   <body>
@@ -21,7 +21,7 @@
       <div class="left">
         <h2>indique.</h2>
         <h2>seja indicado.</h2>
-        <h2>seja a pessoa certa.</h2>
+        <h2>ache a pessoa certa.</h2>
         <p>
           Construa uma comunidade mais forte e faça a diferença com o Indica Aí!
         </p>
@@ -56,7 +56,7 @@
             <div class="or">or</div>
             <div class="line"></div>
           </div>
-          <a id="signup">Cadastre-se</a>
+          <a id="signup" href="signup.html">Cadastre-se</a>
         </form>
       </div>
     </main>
