Add jobopportunity and feed screens

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             />
             <a href="">esqueceu sua senha?</a>
           </div>
-          <a id="signin">Entrar</a>
+          <a id="signin" href="feed.html">Entrar</a>
           <div class="divider">
             <div class="line"></div>
             <div class="or">or</div>
