Add jobopportunity and feed screens

--- a/feed.html
+++ b/feed.html
@@ -16,8 +16,8 @@
     <main>
       <div class="wrapper">
         <div class="card_jobs">
-          <a href="jobopportunity.html">
-            <img src="../assets/image/img1.png" alt="" />
+          <a href="communities.html">
+            <img src="/assets/images/img1.png" alt="" />
             <div class="text_card">
               <div class="title_card">
                 <p><b>Desenvolvedor Back-End</b></p>
