Ajust screens and add others

--- a/community.html
+++ b/community.html
@@ -9,7 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Montserrat+Alternates&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="../stylesheets/feed.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../stylesheets/community.css"
+    />
     <title>Feed</title>
   </head>
 
@@ -25,7 +29,12 @@
     <main>
       <div id="breadcrumbs">
         <a href="#">Home</a>
-        <span>Feed</span>
+        <span>Turma 08N - Ciência da Computação</span>
+      </div>
+      <div class="banner">
+        <img id="mackenzielogo" src="/assets/images/img2.png" />
+        <h2>Turma 08N - Ciência da Computação</h2>
+        <img src="/assets//images/promoimage.jpeg" />
       </div>
       <div class="wrapper">
         <a class="card" href="jobopportunity.html">
