--- a/create_offer.html
+++ b/create_offer.html
@@ -16,6 +16,7 @@
     <header>
       <img src="/assets/logo.svg" alt="Logo Indica Aí" />
       <h1>Indica Aí</h1>
+      <a href="communities.html"><img src="/assets/persons.svg" alt="Logo comunidade"></a>
     </header>
     <main>
       <h1>CADASTRE UMA NOVA VAGA</h1>
