--- a/jobopportunity.html
+++ b/jobopportunity.html
@@ -20,11 +20,15 @@
     <header>
       <img src="/assets/logo.svg" alt="Logo Indica Aí" />
       <h1>Indica Aí</h1>
+      <a href="communities.html"
+        ><img src="/assets/persons.svg" alt="Logo comunidade"
+      /></a>
     </header>
     <main>
-      <p>Home / Vaga</p>
+      <main>
+        <p>Home / Vaga</p>
       <div id="communityrow">
-        <h1>Desenvolvedor full-stack</h1>
+        <h1 id="title">Desenvolvedor full-stack</h1>
         <div id="community-container">
           <p id="communitytext">COMUNIDADES:</p>
           <div id="image-container">
