--- a/communities.html
+++ b/communities.html
@@ -8,7 +8,6 @@
       type="text/css"
       href="../stylesheets/communities.css"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,39 +21,45 @@
     <header>
       <img src="/assets/logo.svg" alt="Logo Indica Aí" />
       <h1>Indica Aí</h1>
+      <a href="communities.html"><img src="/assets/persons.svg" alt="Logo comunidade"></a>
     </header>
-    <main>
-      <p>Home / Communities</p>
-      <h2>SUAS COMUNIDADES</h2>
-    </main>
+
+    <div id="breadcrumbs">
+      <a href="#">Home</a>
+      <span>Comunities</span>
+    </div>
     <div class="wrapper">
-      <div class="card_jobs">
-        <img src="/assets/images/promoimage.jpeg" />
-        <p><b>Turma 08N - Ciência da Computação</b></p>
-        <p class="descripition_card">
+      <a class="card" href="community.html">
+        <img src="/assets/images/hsimage.jpeg" />
+        <div class="card-title">
+          <p class="card-position"><b>Turma 08N - Ciência da Computação</b></p>
+        </div>
+        <p class="card-description">
           Vagas para os guerreiros que sobreviveram os 4 anos do curso de
           ciência da computação no Mackenzie. Um grupo com os mais crânios.
         </p>
-        <p class="footer_card_text">46 vagas</p>
-      </div>
-
-      <div class="card_jobs">
-        <img src="/assets/images/hsimage.jpeg" />
-        <p><b>Turma 08N - Ciência da Computação</b></p>
-        <p class="descripition_card">
+        <p class="card-footer">46 vagas</p>
+      </a>
+      <a class="card" href="community.html">
+        <img src="/assets/images/promoimage.jpeg" />
+        <div class="card-title">
+          <p class="card-position"><b>Pessoal de Tech do Colégio</b></p>
+        </div>
+        <p class="card-description">
           Irmãos até o fim! Não é só porque o ensino médio acabou que vamos
           deixar de ajudarmos uns aos outros. Para quem viveu o colégio, buscar
           vaga é moleza.
         </p>
-        <p class="footer_card_text">15 vagas</p>
-      </div>
-    </div>
+        <p class="card-footer">15 vagas</p>
+      </a>
+      
+  </main>
 
-    <footer>
-      <h3>&copy; 2023 Indica aí.</h3>
-      <p>Termos de uso</p>
-      <p>Privacidade</p>
-      <p>Cookies</p>
-    </footer>
+  <footer>
+    <h3>&copy; 2023 Indica aí.</h3>
+    <p>Termos de uso</p>
+    <p>Privacidade</p>
+    <p>Cookies</p>
+  </footer>
   </body>
 </html>
