prettify job opportunity page and modularize some stuff

--- a/feed.html
+++ b/feed.html
@@ -20,13 +20,11 @@
     </header>
 
     <main>
-      <!-- <a href="#">Home</a> &gt; -->
-      <div id="breadcrumbs">
-        <a href="#">Home</a>
+      <div class="breadcrumbs">
         <span>Feed</span>
       </div>
       <div class="wrapper">
-        <a class="card" href="communities.html">
+        <a class="card" href="job_opportunity.html">
           <img src="/assets/images/feed1.png" />
           <div class="card-title">
             <p class="card-position"><b>Desenvolvedor Back-End</b></p>
@@ -38,7 +36,7 @@
           </p>
           <p class="card-footer">Last updated 3 mins ago</p>
         </a>
-        <a class="card" href="communities.html">
+        <a class="card" href="job_opportunity.html">
           <img src="assets/images/feed2.png" />
           <div class="card-title">
             <p class="card-position"><b>Desenvolvedor Back-End</b></p>
@@ -51,7 +49,7 @@
           </p>
           <p class="card-footer">Last updated 15 mins ago</p>
         </a>
-        <a class="card" href="communities.html">
+        <a class="card" href="job_opportunity.html">
           <img src="assets/images/feed3.png" />
           <div class="card-title">
             <p class="card-position"><b>Desenvolvedor Full-stack</b></p>
@@ -64,7 +62,7 @@
           </p>
           <p class="card-footer">Last updated 40 mins ago</p>
         </a>
-        <a class="card" href="communities.html">
+        <a class="card" href="job_opportunity.html">
           <img src="assets/images/feed4.png" />
           <div class="card-title">
             <p class="card-position"><b>Cientista de Dados</b></p>
@@ -77,7 +75,7 @@
           </p>
           <p class="card-footer">Last updated 5 days ago</p>
         </a>
-        <a class="card" href="communities.html">
+        <a class="card" href="job_opportunity.html">
           <img src="assets/images/feed5.png" />
           <div class="card-title">
             <p class="card-position"><b>Tech Lead</b></p>
@@ -90,7 +88,7 @@
           </p>
           <p class="card-footer">Last updated 1 month ago</p>
         </a>
-        <a class="card" href="communities.html">
+        <a class="card" href="job_opportunity.html">
           <img src="assets/images/feed6.png" />
           <div class="card-title">
             <p class="card-position"><b>Project Manager</b></p>
