--- a/job_opportunity.html
+++ b/job_opportunity.html
@@ -18,8 +18,17 @@
   </head>
   <body>
     <header>
-      <img src="/assets/logo.svg" alt="Logo Indica Aí" />
-      <h1>Indica Aí</h1>
+      <div class="left">
+        <a href="feed.html">
+          <img src="/assets/logo.svg" alt="Logo Indica Aí" />
+        </a>
+        <h1>Indica Aí</h1>
+      </div>
+      <div class="right">
+        <a href="communities.html">
+          <img src="/assets/persons.svg" alt="Logo comunidade" />
+        </a>
+      </div>
     </header>
     <main>
       <div class="breadcrumbs">
