--- a/signup.html
+++ b/signup.html
@@ -14,8 +14,12 @@
   </head>
   <body>
     <header>
-      <img src="/assets/logo.svg" alt="Logo Indica Aí" />
-      <h1>Indica Aí</h1>
+      <div class="left">
+        <img src="/assets/logo.svg" alt="Logo Indica Aí" />
+        <h1>Indica Aí</h1>
+      </div>
+      <div class="right">
+      </div>
     </header>
     <main>
       <h1>FAÇA SEU CADASTRO</h1>
